# Imu_eskf_attitude_estimate

./: CMakeLists.txt  CMakeLists_test.txt  README.md
demo/: Test.cpp  my_test.cpp
include/: Convert.h  ESKF_Attitude.h  MY_IMU.h  Print.h  Serial.h  Socket.h  angle.h  earth.h  imu_types.h  initAtt.h  rotation.h  saveData.h
src/: Convert.cpp  ESKF_Attitude.cpp  MY_IMU.cpp  Serial.cpp  Socket.cpp  crc_table.cpp  hello.cpp  hello1.cpp  testEKF.cpp
visial/client/: package-lock.json  package.json  readme.md  socket_websocket.js
visial/client/front_end/: App.js  Stage.js  index.html
visial/client/front_end/lib/: three.123.js
